@@ -155,3 +155,5 @@ issue 158: when trying to load an world which does not exists, the game gives tw
     31.03.2020 by uuk
 issue 160: when dragging mouse, mouse position attribute of window does not get updated; fixed on: 31.03.2020 by uuk
 issue 162: Slot-instances render item stacks with size 1 with stack size label; fixed on: 01.04.2020 by uuk
+issue 148: block-position label is inverted to the gamerule-value; fixed on: 01.04.2020 by uuk
+issue 163: Inventory serializer crashes when inventory slot count gets smaller on new load; fixed on: 02.04.2020 by uuk
